# medkado_backend

./:     .pub  README.md  pyproject.toml
medkado/: hooks.py  modules.txt  patches.txt
medkado/medkado/doctype/available_coupons_items/: available_coupons_items.json  available_coupons_items.py
medkado/medkado/doctype/family_members/: family_members.json  family_members.py
medkado/medkado/doctype/medical_plan/: medical_plan.js  medical_plan.json  medical_plan.py  test_medical_plan.py
medkado/medkado/doctype/medical_plan_items/: medical_plan_items.json  medical_plan_items.py
medkado/medkado/doctype/medkado_admin_settings/: medkado_admin_settings.js  medkado_admin_settings.json  medkado_admin_settings.py  test_medkado_admin_settings.py
medkado/medkado/doctype/medkado_available_districts/: medkado_available_districts.js  medkado_available_districts.json  medkado_available_districts.py  test_medkado_available_districts.py
medkado/medkado/doctype/medkado_coupons/: medkado_coupons.js  medkado_coupons.json  medkado_coupons.py  test_medkado_coupons.py
medkado/medkado/doctype/medkado_hospitals/: medkado_hospitals.js  medkado_hospitals.json  medkado_hospitals.py  test_medkado_hospitals.py
medkado/medkado/doctype/medkado_user/: medkado_home_page.py  medkado_user.js  medkado_user.json  medkado_user.py  test_medkado_user.py
medkado/medkado/doctype/razorpay_payment_logs/: razorpay_payment_logs.js  razorpay_payment_logs.json  razorpay_payment_logs.py  test_razorpay_payment_logs.py
medkado/patches/: patches.py
(+8 files in other folders)
